feat: add admin, appointment, employee, and vehicle services with CRUD operations